# TiObj-bin

./: CMakeLists.txt
src/: tiforeach.cpp  tiobj-read.cpp  tiobj-select.cpp  tiobj.hpp  tiobj2shell.cpp
